<resources>
    <string name="app_name">Submission5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_connection">Connection Error. Please check your Internet Connection</string>
    <string name="movie_title">Movies</string>
    <string name="tv_title">TV Shows</string>
    <string name="search_movie">Search Movie</string>
    <string name="button_search_movie">Search Movie</string>
    <string name="item_name">Title</string>
    <string name="item_release">Release Date</string>
    <string name="item_description">Overview</string>
    <string name="item_airing">Airing Date</string>
    <string name="search_tvshow">Search TV Show</string>
    <string name="movie_detail_header">Movie Detail</string>
    <string name="detail_movie_name">Movie Name</string>
    <string name="detail_movie_release">Release Date</string>
    <string name="detail_movie_description">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="detail_movie_title">Original Title</string>
    <string name="original_language">Language</string>
    <string name="like">Like</string>
    <string name="average">Vote Average</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="fav_tvshow">Favorite TV Show</string>
    <string name="language_setting">Language Setting</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="empty_text">No Favorite Data</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="title_daily_reminder">Daily Reminder</string>
    <string name="title_new_release_reminder">New Release Reminder</string>
    <string name="movie_fav">Favorite Movie</string>
    <string name="tvshow_fav">Favorite TV Show</string>
    <string name="remove_from_favorite">Remove Item from Favorite</string>
    <string name="added_to_favorite">Add Item to Favorite</string>
    <string name="detail_tv_name">TV Show Name</string>
    <string name="detail_tv_airing">Airing Date</string>
    <string name="detail_tv_title">Original Title</string>
    <string name="reminder">Reminder</string>
    <string name="dailyremind_message">Let\'s Check Catalogue Movie Today!</string>
    <string name="daily_reminder_enabled">Daily Reminder is Enabled</string>
    <string name="daily_reminder_disabled">Daily Reminder is Disabled</string>
    <string name="newrelease_reminder_enabled">New Release is Enabled</string>
    <string name="newrelease_reminder_disabled">New Release is Disabled</string>
</resources>
