<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.tvshow.TVShowDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_blur_detail"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_poster_detail"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_blur_detail" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/detail_tv_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_detail" />

        <TextView
            android:id="@+id/tv_detail_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/detail_tv_airing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/original_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release" />

        <TextView
            android:id="@+id/tv_detail_original_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/original_language"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/language"
            app:layout_constraintStart_toEndOf="@+id/language"
            app:layout_constraintTop_toTopOf="@+id/language"
            app:layout_constraintVertical_bias="0.19999999" />

        <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <ImageView
            android:id="@+id/img_vote"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/average"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/img_popularity"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_line" />

        <ImageView
            android:id="@+id/img_popularity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.249"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_line"
            app:srcCompat="@drawable/ic_insert_chart_black_24dp" />

        <TextView
            android:id="@+id/tv_detail_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_vote"
            app:layout_constraintStart_toStartOf="@+id/img_vote"
            app:layout_constraintTop_toBottomOf="@+id/img_vote" />

        <TextView
            android:id="@+id/tv_detail_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_popularity"
            app:layout_constraintStart_toStartOf="@+id/img_popularity"
            app:layout_constraintTop_toBottomOf="@+id/img_popularity" />

        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_popularity" />

        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/detail_movie_description"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_line" />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/detail_movie_description"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>